Added a model for Bucket